--- a/global/category.html
+++ b/global/category.html
@@ -867,6 +867,57 @@
                             </div>
                         </div>
                         
+<div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">英国保守党新党魁特拉斯将出任首相</h4>
+                                <p class="gazette-post-date">2022年9月5日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/SEP05_UK_New_PM.png" style="max-height: 250px; width: auto;"
+                                        alt="英国保守党新党魁特拉斯将出任首相">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>英国执政保守党星期一（2022年9月5日）宣布选出新党魁特拉斯（Liz Truss，又译卓慧思），接替因丑闻缠身被迫辞职的约翰逊首相。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="SEP05_UK_New_PM.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">英国女王伊丽莎白二世逝世</h4>
+                                <p class="gazette-post-date">2022年9月8日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/QE2_Passed_Away/QE2_Passed_Away_img_0.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="英国女王伊丽莎白二世逝世">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>9月8日，伊丽莎白女王，英国在位时间最长的君主，英国的象征领袖，70年来在世界舞台上举足轻重的人物，于周四在她苏格兰的家中平静地去世，享年96岁。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="SEP08_QE2_Passed_Away.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         
 
 
