weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Sep 6, 2022</p>
+                            <p>Sep 12, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年8月29日~9月5日一周（8日）疫情简报：
+                                <p>2022年9月5日~11日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低21%），病例总数超过161万例，平均每日增长1035例（上周为1310例）；累计死亡13370人，最近一周新增死亡34人（上周为37人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低8%），病例总数超过162万例，平均每日增长1004例（上周为1035例）；累计死亡13404人，最近一周新增死亡34人（上周为34人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1285）、戴恩郡Madison（+788）、布朗郡Green Bay（+410）、沃基肖郡Waukesha（+358）、拉辛郡Racine（+262）、Winnebago郡（+237）、Kenosha郡（+224）、Rock郡（+200）、Marathon郡（+178）、Outagamie郡（+164）、Fond du Lac郡（+162）、La Crosse郡（+153）、Washington郡（+128）、Eau Claire郡（+121）、St. Croix郡（+121）、Walworth郡（+115）、Wood郡（+112）、Portage郡（+103）、Sheboygan郡（+100），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1302）、戴恩郡Madison（+920）、布朗郡Green Bay（+342）、沃基肖郡Waukesha（+318）、拉辛郡Racine（+253）、Winnebago郡（+220）、Kenosha郡（+213）、Rock郡（+208）、Marathon郡（+157）、Outagamie郡（+154）、Fond du Lac郡（+150）、La Crosse郡（+145）、Wood郡（+125）、Washington郡（+123）、Dodge郡（+103），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅下降（降低26%），目前病例总数为154859例，周内（8日）新增891例，平均每日增长111例（上周为151例），一周平均检测阳性率为11.1%（稍低于上周的12.0%）。戴恩郡新冠住院病人数目由68人降至51人；重症病房新冠病人数目由4人升至9人；累计死亡519例，新增4例（上周为4例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周大幅上升（升高117%），目前病例总数为155735例，周内新增1209例，平均每日增长173例（上周为111例），一周平均检测阳性率为11.8%（稍高于上周的11.1%）。戴恩郡新冠住院病人数目由51人降至47人；重症病房新冠病人数目由9人升至10人；累计死亡525例，新增6例（上周为4例）。
                                    
-                                    <br><br>—  截止到9月2日，戴恩郡接种至少一剂疫苗者超过46.2万人，占总人口83.7%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占64.2%。
+                                    <br><br>—  截止到9月11日，戴恩郡接种至少一剂疫苗者超过46.2万人，占总人口83.7%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占64.2%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Lake Monona东北岸（Starkweather Park以南）、Fitchburg北部部分区域（北至Beltline高速与Park St及Fish Hatchery Rd路口）、麦迪逊市西部Old Middleton Rd与Mineral Point Rd之间部分区域（Glen Oak Hills Park与Garner Park附近）、戴恩郡东部边界附近（包括Deerfield）、戴恩郡东北部的Sun Prairie市西部等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：UW主校园南侧（Camp Randall橄榄球场及以东、Park St以西、University Ave以南、Regent St以北）、戴恩郡区域机场（MSN）附近、戴恩郡东南部的Stoughton、Lake Wingra西北岸至Forest Hill Cemetery附近、Lake Mendota东北岸（Warner Park附近）等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性52例（上周为50例），包括学生43例（上周为35例）、职工9例（上周为15例）。一周检测阳性率为学生18.6%（上周为17.3%），职工5.3%（上周为8.0%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，学生与职工病例新增速度较上周均大幅升高。最近一周内共新增阳性138例（上周为52例），包括学生120例（上周为43例，升高179%）、职工18例（上周为9例，升高100%）。一周检测阳性率为学生28.2%（上周为18.6%），职工12.3%（上周为5.3%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
