--- a/campus/category.html
+++ b/campus/category.html
@@ -262,6 +262,95 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Campus</a>
+                                </div>
+                                <h4 class="font-pt">麦迪逊北侧的夏季暴力事件令人感到担忧</h4>
+                                <p class="gazette-post-date">2022年8月26日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                  <img src="img/policecar.png" style="max-height: 250px; width: auto;">
+                              </div>
+                                <!-- Post Excerpt -->
+                                <p>威斯康星州麦迪逊市北区发生一连串的暴力犯罪后，该地区的一位居民十分担忧，他们担心子弹会打入自己的家中。
+
+据麦迪逊警方称，最近的一起事件是周五凌晨发生的凶杀案，一名蒙面男子闯入Packers Avenue的一所公寓，被屋内的人开枪打死了。
+                                  </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="voilence.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Campus</a>
+                                </div>
+                                <h4 class="font-pt">戴恩县地区机场扩建进程已过半</h4>
+                                <p class="gazette-post-date">2022年8月26日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                  <img src="img/640.png" style="max-height: 250px; width: auto;">
+                              </div>
+                                <!-- Post Excerpt -->
+                                <p>威斯康星州麦迪逊官员们说，戴恩郡地区机场9万平方英尺的扩建工程已经完成了一半。
+
+"明年这个时候，我们将完工。新机场可以容纳更多的航班和飞机，"戴恩郡地区机场营销和通讯主任迈克尔·里奇斯周五说。
+                                  </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="airport.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Campus</a>
+                                </div>
+                                <h4 class="font-pt">【麦迪逊警方在州街一酒吧查获100多名未成年饮酒</h4>
+                                <p class="gazette-post-date">2022年9月3日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                  <img src="img/underage/bar.jpeg" style="max-height: 250px; width: auto;">
+                              </div>
+                                <!-- Post Excerpt -->
+                                <p>威斯康星州麦迪逊市周四晚上，麦迪逊警方列举了 100 多名未成年人在校园内的一家酒吧饮酒。据报导，在酒吧的 143 人中，只有 6 人年龄在 21 岁或以上。该部门的一位发言人表示，麦迪逊警察局的中区社区警务小组与威斯康星大学警察局一起进行了传票，同时对酒类法律进行了“主动执法”。
+                                  </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="underage.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
                         <div class="col-12 col-md-4">
                           <!-- Gazette Welcome Post -->
                           <div class="gazette-welcome-post">
