weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -294,20 +294,20 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年9月12日~18日一周疫情简报：
+                                <p>2022年9月19日~25日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高5%），病例总数超过163万例，平均每日增长1053例（上周为1004例）；累计死亡13457人，最近一周新增死亡53人（上周为34人）。
-                                    
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1252）、戴恩郡Madison（+1174）、布朗郡Green Bay（+392）、沃基肖郡Waukesha（+347）、Kenosha郡（+249）、拉辛郡Racine（+221）、Rock郡（+214）、Marathon郡（+203）、Winnebago郡（+191）、Outagamie郡（+187）、Fond du Lac郡（+143）、La Crosse郡（+139）、Washington郡（+138）、Wood郡（+124）、Manitowoc郡（+118）、Walworth郡（+117）、St. Croix郡（+114）、Jefferson郡（+111）、Sheboygan郡（+102）、Dodge郡（+101），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低10%），病例总数超过163万例，平均每日增长947例（上周为1053例）；累计死亡13482人，最近一周新增死亡25人（上周为53人）。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低2%），目前病例总数为156920例，周内新增1185例，平均每日增长169例（上周为173例），一周平均检测阳性率为12.4%（稍高于上周的11.8%）。戴恩郡新冠住院病人数目由47人降至45人；重症病房新冠病人数在10人左右波动；累计死亡527例，新增2例（上周为6例）。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1031）、戴恩郡Madison（+927）、布朗郡Green Bay（+384）、沃基肖郡Waukesha（+341）、拉辛郡Racine（+236）、Winnebago郡（+206）、Rock郡（+191）、La Crosse郡（+183）、Kenosha郡（+183）、Outagamie郡（+170）、Marathon郡（+161）、Washington郡（+155）、Wood郡（+125）、Fond du Lac郡（+121）、Walworth郡（+118）、Jefferson郡（+112）、St. Croix郡（+104），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  截止到9月18日，戴恩郡接种至少一剂疫苗者超过47.3万人，占总人口85.7%；完成接种疫苗者超过44.1万人，占总人口的79.9%；完成接种加强针数据近日未更新。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低23%），目前病例总数为157838例，周内新增918例，平均每日增长131例（上周为169例），一周平均检测阳性率为10.4%（稍低于上周的12.4%）。戴恩郡新冠住院病人数目由45人升至53人；重症病房新冠病人数由10人升至12人；累计死亡530例，新增3例（上周为2例）。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：UW主校园南侧（北至Univ Ave、南至Regent St、西至Camp Randall橄榄球场、东至Park St）、UW主校园区域（北至湖边、南与东至W Johnson St与Univ Ave、西至Walnut St、东至Lake St）、UW主校园东侧（北至State St、南至Campus Dr与Univ Ave、西至Park St）、Lake Mendota东岸（James Madison Park与Tenny Park之间，东至E Johnson St）、戴恩郡区域机场（MSN）附近、戴恩郡西南部的Midtown Rd附近部分区域（County Rd M以西），详情请查看所附地图。
+                                    <br><br>—  截止到9月25日，戴恩郡接种至少一剂疫苗者超过47.4万人，占总人口85.8%；完成接种疫苗者超过44.1万人，占总人口的79.9%；完成接种加强针数据近日未更新。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，学生与职工病例新增速度较上周均大幅升高。最近一周内共新增阳性226例（上周为138例），包括学生202例（上周为120例，升高68%）、职工24例（上周为18例，升高33%）。一周检测阳性率为学生27.7%（上周为28.2%），职工11.6%（上周为12.3%）。
-                                    
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：戴恩郡区域机场（MSN）附近、UW主校园区域（北至湖边、南与东至W Johnson St与Univ Ave、西至Walnut St、东至Lake St）、戴恩郡东南部的Stoughton东北、I-39与I-94交叉口西南侧（S Stoughton Rd以东）、Beltline高速与I-39交叉口西南侧（Waubesa湖东北岸、Stoughton Rd附近）、Middleton市东北（Mendota湖西岸）、Monona市北部（Monona湖东岸），详情请查看所附地图。
+
+                                    <br><br>—  威斯康星大学麦迪逊分校中，学生与职工病例新增速度较上周均大幅升高。最近一周内共新增阳性150例（上周为226例），包括学生132例（上周为202例，降低35%）、职工18例（上周为24例，降低25%）。一周检测阳性率为学生21.6%（上周为27.7%），职工9.4%（上周为11.6%）。
+
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
                                 <br><br><br><br>
