--- a/campus/category.html
+++ b/campus/category.html
@@ -263,6 +263,85 @@
                     <div class="row justify-content-center section_padding_100">
 
 
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Campus</a>
+                                </div>
+                                <h4 class="font-pt">校警在橄榄球赛上逮捕24名威大学生</h4>
+                                <p class="gazette-post-date">2022年9月19日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                  <img src="img/volleyball.png" style="max-height: 250px; width: auto;">
+                              </div>
+                                <!-- Post Excerpt -->
+                                <p>据Channel 3000报道，上周六（17日），在威大对阵新墨西哥州立大学的橄榄球比赛现场，校警共计逮捕32人，其中24人是威大的学生。
+                                  </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="volleyball.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Campus</a>
+                                </div>
+                                <h4 class="font-pt">麦迪逊一市议员因曾加入极右翼反政府组织而辞职</h4>
+                                <p class="gazette-post-date">2022年9月16日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                  <img src="img/senator/senator_img_1.jpeg" style="max-height: 250px; width: auto;">
+                              </div>
+                                <!-- Post Excerpt -->
+                                <p>麦迪讯市议员加里 · 哈尔弗森(Gary Halverson)从麦迪逊市议会辞职，即刻生效。哈尔弗森是在周三深夜发布在该市网站上的一份声明中宣布这一消息的。
+
+                                  </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="senator.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Campus</a>
+                                </div>
+                                <h4 class="font-pt">本季流感疫苗已经开放接种</h4>
+                                <p class="gazette-post-date">2022年9月14日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                  <img src="img/vaccine/vaccine_img_4.png" style="max-height: 250px; width: auto;">
+                              </div>
+                                <!-- Post Excerpt -->
+                                <p>研究表明，接种流感疫苗可以有效避免疾病和保持周围人健康的且流感病毒不会在高度免疫的人群中传播快速传播。学校建议所有学生都应每年接种流感疫苗，降低流感传播的风险。去年，本校有超过 20,000 名学生接种了流感疫苗。
+                                  </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="vaccine.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
                         <div class="col-12 col-md-4">
