--- a/society/category.html
+++ b/society/category.html
@@ -264,6 +264,38 @@
                     <div class="row justify-content-center section_padding_100">
 
 
+                         <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
+                                <h4 class="font-pt">威斯康辛一执法人员被指控枪杀手无寸铁的嫌犯</h4>
+                                <p class="gazette-post-date">2022年9月30日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/shot/shot_img_1.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="Mark Wagner">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>向手无寸铁的嫌疑人开枪的两名州执法人员中的一位已经被起诉。
+
+法庭记录显示，49岁的Mark Wagner周四被指控使用危险武器，犯有二级鲁莽危害安全罪。
+
+上周四早上，Wagner在戴恩县巡回法院首次露面，并获得了500美元的签名保证金。
+
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="shot.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                          <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
