weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Oct 3, 2022</p>
+                            <p>Oct 10, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年9月26日~10月2日一周疫情简报：
+                                <p>2022年10月3日~9日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低11%），病例总数超过164万例，平均每日增长838例（上周为947例）；累计死亡13499人，最近一周新增死亡17人（上周为25人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高1%），病例总数超过165万例，平均每日增长850例（上周为838例）；累计死亡13538人，最近一周新增死亡39人（上周为17人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+903）、戴恩郡Madison（+770）、沃基肖郡Waukesha（+331）、布朗郡Green Bay（+244）、Chippewa郡（+204）、拉辛郡Racine（+184）、Outagamie郡（+183）、Rock郡（+174）、Marathon郡（+172）、Kenosha郡（+163）、Winnebago郡（+163）、Washington郡（+141）、La Crosse郡（+132）、Manitowoc郡（+130）、Fond du Lac郡（+110）、Wood郡（+107），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1032）、戴恩郡Madison（+676）、沃基肖郡Waukesha（+330）、拉辛郡Racine（+227）、Winnebago郡（+222）、布朗郡Green Bay（+203）、Marathon郡（+174）、Rock郡（+165）、La Crosse郡（+165）、Outagamie郡（+156）、Kenosha郡（+146）、Fond du Lac郡（+146）、Washington郡（+114）、St. Croix郡（+108）、Portage郡（+106），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低17%），目前病例总数为158599例，周内新增761例，平均每日增长109例（上周为131例），一周平均检测阳性率为8.8%（低于上周的10.4%）。戴恩郡新冠住院病人数目由53人降至52人；重症病房新冠病人数由12人降至7人；累计死亡531例，新增1例（上周为3例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低12%），目前病例总数为159268例，周内新增669例，平均每日增长96例（上周为109例），一周平均检测阳性率为8.8%（同上周）。戴恩郡新冠住院病人数目由52人升至57人；重症病房新冠病人数由7人降至5人；累计死亡531例，新增0例（上周为1例）。
+                                    
+                                    <br><br>—  截止到10月9日，戴恩郡接种至少一剂疫苗者超过47.5万人，占总人口86.0%；完成接种疫苗者超过44.2万人，占总人口的80.0%；完成接种加强针数据已暂停更新。
 
-                                    <br><br>—  截止到10月2日，戴恩郡接种至少一剂疫苗者超过47.4万人，占总人口85.9%；完成接种疫苗者超过44.1万人，占总人口的80.0%；完成接种加强针数据近日未更新。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：戴恩郡西部及西北部地区（包括Sauk City东南方向、Roxbury、Marxville）、Monona湖东北岸（Starkweather Park以南）、戴恩郡西南部Midtown Rd与County Rd M路口西侧、戴恩郡东北部的Sun Prairie市周边地区）等，详情请查看所附地图。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：麦迪逊西部的Owen Conservation Park西南区域（至Gammon Rd与Mineral Point Rd）、戴恩郡东部I-94高速与County Rd N路口南部附近、Mendota湖东岸（Northgate购物中心西侧）、Beltline高速西段的西侧及南侧区域（西至Pope Farm Park、南至County Rd PD），详情请查看所附地图。
-
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性59例（上周为150例），包括学生46例（上周为132例，降低65%）、职工13例（上周为18例，降低28%）。一周检测阳性率为学生12.9%（上周为21.6%），职工8.8%（上周为9.4%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性27例（上周为59例），包括学生18例（上周为46例，降低61%）、职工9例（上周为13例，降低31%）。一周检测阳性率为学生6.5%（上周为12.9%），职工5.7%（上周为8.8%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
