weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Oct 10, 2022</p>
+                            <p>Oct 17, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年10月3日~9日一周疫情简报：
+                                <p>2022年10月10日~16日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高1%），病例总数超过165万例，平均每日增长850例（上周为838例）；累计死亡13538人，最近一周新增死亡39人（上周为17人）。
+                                    <br><br>—  威斯康星州疫情增长速度与上周大致相同，病例总数超过165万例，平均每日增长849例（上周为850例）；累计死亡13582人，最近一周新增死亡44人（上周为39人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1032）、戴恩郡Madison（+676）、沃基肖郡Waukesha（+330）、拉辛郡Racine（+227）、Winnebago郡（+222）、布朗郡Green Bay（+203）、Marathon郡（+174）、Rock郡（+165）、La Crosse郡（+165）、Outagamie郡（+156）、Kenosha郡（+146）、Fond du Lac郡（+146）、Washington郡（+114）、St. Croix郡（+108）、Portage郡（+106），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+946）、戴恩郡Madison（+668）、沃基肖郡Waukesha（+384）、Winnebago郡（+233）、拉辛郡Racine（+224）、Marathon郡（+189）、布朗郡Green Bay（+186）、Rock郡（+178）、Kenosha郡（+171）、Fond du Lac郡（+156）、Outagamie郡（+151）、La Crosse郡（+147）、Washington郡（+134）、Walworth郡（+108）、Dodge郡（+102），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低12%），目前病例总数为159268例，周内新增669例，平均每日增长96例（上周为109例），一周平均检测阳性率为8.8%（同上周）。戴恩郡新冠住院病人数目由52人升至57人；重症病房新冠病人数由7人降至5人；累计死亡531例，新增0例（上周为1例）。
-                                    
-                                    <br><br>—  截止到10月9日，戴恩郡接种至少一剂疫苗者超过47.5万人，占总人口86.0%；完成接种疫苗者超过44.2万人，占总人口的80.0%；完成接种加强针数据已暂停更新。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度与上周大致相同，目前病例总数为159938例，周内新增670例，平均每日增长96例（上周为96例），一周平均检测阳性率为7.8%（低于上周的8.8%）。戴恩郡新冠住院病人数目由57人升至59人；重症病房新冠病人数由5人升至7人；累计死亡531例，新增0例（上周为0例）。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：戴恩郡西部及西北部地区（包括Sauk City东南方向、Roxbury、Marxville）、Monona湖东北岸（Starkweather Park以南）、戴恩郡西南部Midtown Rd与County Rd M路口西侧、戴恩郡东北部的Sun Prairie市周边地区）等，详情请查看所附地图。
+                                    <br><br>—  截止到10月16日，戴恩郡接种至少一剂疫苗者超过47.5万人，占总人口86.1%；完成接种疫苗者超过44.2万人，占总人口的80.0%；完成接种加强针数据已暂停更新。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性27例（上周为59例），包括学生18例（上周为46例，降低61%）、职工9例（上周为13例，降低31%）。一周检测阳性率为学生6.5%（上周为12.9%），职工5.7%（上周为8.8%）。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Mendota湖东北岸（Northport Dr以南，东至Katherine Wells Central Park附近）、Beltline高速255至257号出口附近区域（北至Mineral Point Rd，西至S Gammon Rd，东至靠近S Midvale Blvd一带，南至Schroeder Rd）、戴恩郡西南部的Mount Horeb村附近、戴恩郡东南部的Stoughton市附近等，详情请查看所附地图。
+
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性28例（上周为27例），包括学生15例（上周为18例，降低17%）、职工13例（上周为9例，升高44%）。一周检测阳性率为学生6.8%（上周为6.5%），职工15.3%（上周为5.7%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
