weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年10月17日~23日一周疫情简报：
+                                <p>2022年10月24日~30日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高3%），病例总数超过166万例，平均每日增长874例（上周为849例）；累计死亡13608人，最近一周新增死亡26人（上周为44人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低1%），病例总数超过166万例，平均每日增长863例（上周为874例）；累计死亡13656人，最近一周新增死亡48人（上周为26人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+735）、戴恩郡Madison（+511）、沃基肖郡Waukesha（+420）、拉辛郡Racine（+182）、Winnebago郡（+175）、Rock郡（+168）、Marathon郡（+140）、Washington郡（+126）、Dodge郡（+126）、布朗郡Green Bay（+119）、Fond du Lac郡（+105）、Ozaukee郡（+105），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+993）、戴恩郡Madison（+623）、沃基肖郡Waukesha郡（+372）、Winnebago郡（+238）、Racine郡（+238）、Rock郡（+211）、Fond du Lac郡（+171）、布朗郡Green Bay（+169）、Washington郡（+166）、Kenosha郡（+164）、Outagamie郡（+157）、Marathon郡（+142）、Walworth郡（+141）、Wood郡（+114）、Dodge郡（+113）、La Crosse郡（+109）、Manitowoc郡（+109）、Sheboygan郡（+102），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低3%），目前病例总数为160586例，周内新增648例，平均每日增长93例（上周为96例），一周平均检测阳性率为8.0%（稍高于上周的7.8%）。戴恩郡新冠住院病人数目由59人降至51人；重症病房新冠病人数由7人降至3人；累计死亡535例，新增4例（上周为0例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低1%），目前病例总数为161228例，周内新增642例，平均每日增长92例（上周为93例），一周平均检测阳性率为7.8%（稍低于上周的8.0%）。戴恩郡新冠住院病人数目由51人降至48人；重症病房新冠病人数由3人升至5人；累计死亡538例，新增3例（上周为4例）。
 
-                                    <br><br>—  截止到10月23日，戴恩郡接种至少一剂疫苗者超过47.6万人，占总人口86.1%；完成接种疫苗者超过44.2万人，占总人口的80.1%；完成接种加强针数据已暂停更新。
+                                    <br><br>—  截止到10月30日，戴恩郡接种至少一剂疫苗者超过47.6万人，占总人口86.2%；完成接种疫苗者超过44.2万人，占总人口的80.1%；完成接种加强针数据已暂停更新。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：戴恩郡东北部边界附近（York镇与Marshall村）、戴恩郡东南部的Stoughton市附近、Beltline高速257至258号出口北侧区域（Odana Hills Park以北至Mineral Point Rd）、戴恩郡西北部的部分地区（Roxbury镇、Berry镇与Cross Plains镇）、Mendota湖的北岸（Westport Rd以南）等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：麦迪逊市东北部Northport Dr以北部分地区（Cherokee Marsh-South Unit以南）、Beltline高速255至257号出口之间区域（Mineral Point Rd与Schroeder Rd之间）、戴恩郡东南部的Stoughton市东北部、戴恩郡南部的Oregon村西部及周边区域、Monona湖东北岸（至Commercial Ave与N Stoughton Rd）等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性27例（上周为28例），包括学生16例（上周为15例，升高7%）、职工11例（上周为13例，降低15%）。一周检测阳性率为学生7.2%（上周为6.8%），职工9.6%（上周为15.3%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性29例（上周为27例），包括学生18例（上周为16例，升高13%）、职工11例（上周为11例，无变化）。一周检测阳性率为学生10.0%（上周为7.2%），职工10.5%（上周为9.6%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
