--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Oct 24, 2022</p>
+                            <p>Nov 7, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年10月24日~30日一周疫情简报：
+                                <p>2022年10月31日~11月6日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低1%），病例总数超过166万例，平均每日增长863例（上周为874例）；累计死亡13656人，最近一周新增死亡48人（上周为26人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高2%），病例总数超过167万例，平均每日增长880例（上周为863例）；累计死亡13684人，最近一周新增死亡28人（上周为48人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+993）、戴恩郡Madison（+623）、沃基肖郡Waukesha郡（+372）、Winnebago郡（+238）、Racine郡（+238）、Rock郡（+211）、Fond du Lac郡（+171）、布朗郡Green Bay（+169）、Washington郡（+166）、Kenosha郡（+164）、Outagamie郡（+157）、Marathon郡（+142）、Walworth郡（+141）、Wood郡（+114）、Dodge郡（+113）、La Crosse郡（+109）、Manitowoc郡（+109）、Sheboygan郡（+102），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1034）、戴恩郡Madison（+572）、沃基肖郡Waukesha郡（+385）、Rock郡（+253）、Racine郡（+201）、Fond du Lac郡（+197）、Winnebago郡（+197）、Marathon郡（+174）、Washington郡（+161）、Kenosha郡（+152）、布朗郡Green Bay（+151）、Outagamie郡（+147）、Walworth郡（+134）、La Crosse郡（+112）、Jefferson郡（+106）、Dodge郡（+105），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低1%），目前病例总数为161228例，周内新增642例，平均每日增长92例（上周为93例），一周平均检测阳性率为7.8%（稍低于上周的8.0%）。戴恩郡新冠住院病人数目由51人降至48人；重症病房新冠病人数由3人升至5人；累计死亡538例，新增3例（上周为4例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低8%），目前病例总数为161820例，周内新增592例，平均每日增长85例（上周为92例），一周平均检测阳性率为7.1%（低于上周的7.8%）。戴恩郡新冠住院病人数目由48人升至73人；重症病房新冠病人数由5人升至6人；累计死亡539例，新增1例（上周为3例）。
 
-                                    <br><br>—  截止到10月30日，戴恩郡接种至少一剂疫苗者超过47.6万人，占总人口86.2%；完成接种疫苗者超过44.2万人，占总人口的80.1%；完成接种加强针数据已暂停更新。
+                                    <br><br>—  截止到11月6日，戴恩郡接种至少一剂疫苗者超过47.6万人，占总人口86.3%；完成接种疫苗者超过44.2万人，占总人口的80.1%；完成接种加强针数据已暂停更新。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：麦迪逊市东北部Northport Dr以北部分地区（Cherokee Marsh-South Unit以南）、Beltline高速255至257号出口之间区域（Mineral Point Rd与Schroeder Rd之间）、戴恩郡东南部的Stoughton市东北部、戴恩郡南部的Oregon村西部及周边区域、Monona湖东北岸（至Commercial Ave与N Stoughton Rd）等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：戴恩郡东南部的Stoughton市北部及戴恩郡东南边境附近、麦迪逊市东北部Northport Dr以北部分地区（Cherokee Marsh-South Unit以南）、Beltline高速西南段以南（County Rd M与High Point Rd之间）、戴恩郡东北边境附近、Old Middleton Rd与Mineral Point Rd之前部分区域等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性29例（上周为27例），包括学生18例（上周为16例，升高13%）、职工11例（上周为11例，无变化）。一周检测阳性率为学生10.0%（上周为7.2%），职工10.5%（上周为9.6%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性42例（上周为29例），包括学生29例（上周为18例，升高61%）、职工13例（上周为11例，升高18%）。一周检测阳性率为学生12.4%（上周为10.0%），职工12.9%（上周为10.5%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
