--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Nov 14, 2022</p>
+                            <p>Nov 21, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年11月7日~13日一周疫情简报：
+                                <p>2022年11月14日~20日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低17%），病例总数超过168万例，平均每日增长729例（上周为880例）；累计死亡13710人，最近一周新增死亡26人（上周为28人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低2%），病例总数超过168万例，平均每日增长717例（上周为729例）；累计死亡13740人，最近一周新增死亡30人（上周为26人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+867）、戴恩郡Madison（+498）、沃基肖郡Waukesha郡（+310）、Racine郡（+203）、Rock郡（+193）、Dodge郡（+176）、Kenosha郡（+155）、Winnebago郡（+148）、Washington郡（+143）、布朗郡Green Bay（+142）、Marathon郡（+140）、Fond du Lac郡（+136）、Outagamie郡（+120）、La Crosse郡（+109），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee郡（+911）、戴恩郡Madison（+502）、沃基肖郡Waukesha郡（+304）、Rock郡（+206）、Kenosha郡（+166）、Marathon郡（+162）、Racine郡（+161）、布朗郡Green Bay（+157）、Winnebago郡（+152）、Outagamie郡（+126）、Dodge郡（+124）、Washington郡（+122）、Fond du Lac郡（+116）、St. Croix郡（+113），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低16%），目前病例总数为162320例，周内新增500例，平均每日增长71例（上周为85例），一周平均检测阳性率为6.0%（低于上周的7.1%）。戴恩郡新冠住院病人数目由73人降至64人；重症病房新冠病人数由6人降至4人；累计死亡539例，新增0例（上周为1例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低2%），目前病例总数为162812例，周内新增492例，平均每日增长70例（上周为71例），一周平均检测阳性率为5.9%（稍低于上周的6.0%）。戴恩郡新冠住院病人数目由64人升至70人；重症病房新冠病人数由4人升至6人；累计死亡544例，新增5例（上周为0例）。
 
-                                    <br><br>—  截止到11月13日，戴恩郡接种至少一剂疫苗者超过47.7万人，占总人口86.4%；完成接种疫苗者超过44.2万人，占总人口的80.2%；完成接种加强针数据已暂停更新。
+                                    <br><br>—  截止到11月20日，戴恩郡接种至少一剂疫苗者超过47.7万人，占总人口86.5%；完成接种疫苗者超过44.3万人，占总人口的80.2%；完成接种加强针数据已暂停更新。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Mendota湖东北岸（Northport Dr以南，东至Katherine Wells Central Park附近）、Monona湖北岸（北至Washington Ave与Commercial Ave、东至S Stoughton Rd）、戴恩郡东南部的Stoughton市东北部、戴恩郡区域机场（MSN）附近、Eagle Heights与University Houses社区等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Monona湖北岸（北至E Washington Ave与Commercial Ave、东至Starkweather Creek）、Beltline高速265-266号口附近北侧（Monona市）、麦迪逊市东北部Northport Dr以北部分地区（Cherokee Marsh-South Unit以南）、戴恩郡南部的Oregon Village附近等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性31例（上周为42例），包括学生19例（上周为29例，降低34%）、职工12例（上周为13例，降低8%）。一周检测阳性率为学生9.0%（上周为12.4%），职工12.6%（上周为12.9%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性28例（上周为31例），包括学生15例（上周为19例，降低21%）、职工13例（上周为12例，升高8%）。一周检测阳性率为学生8.1%（上周为9.0%），职工12.0%（上周为12.6%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
