weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Nov 21, 2022</p>
+                            <p>Nov 28, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年11月14日~20日一周疫情简报：
+                                <p>2022年11月21日~27日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低2%），病例总数超过168万例，平均每日增长717例（上周为729例）；累计死亡13740人，最近一周新增死亡30人（上周为26人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周稍有上升（升高5%），病例总数超过169万例，平均每日增长751例（上周为717例）；累计死亡13745人，最近一周新增死亡5人（上周为30人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee郡（+911）、戴恩郡Madison（+502）、沃基肖郡Waukesha郡（+304）、Rock郡（+206）、Kenosha郡（+166）、Marathon郡（+162）、Racine郡（+161）、布朗郡Green Bay（+157）、Winnebago郡（+152）、Outagamie郡（+126）、Dodge郡（+124）、Washington郡（+122）、Fond du Lac郡（+116）、St. Croix郡（+113），其他郡一周新增人数在100人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+875）、戴恩郡Madison（+585）、沃基肖郡Waukesha（+312）、布朗郡Green Bay（+205）、Racine郡（+204）、Marathon郡（+186）、Kenosha郡（+175）、St. Croix郡（+164）、Rock郡（+161）、Outagamie郡（+139）、Winnebago郡（+126）、Washington郡（+111），其他郡一周新增人数在100人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低2%），目前病例总数为162812例，周内新增492例，平均每日增长70例（上周为71例），一周平均检测阳性率为5.9%（稍低于上周的6.0%）。戴恩郡新冠住院病人数目由64人升至70人；重症病房新冠病人数由4人升至6人；累计死亡544例，新增5例（上周为0例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高18%），目前病例总数为163395例，周内新增583例，平均每日增长83例（上周为70例），一周平均检测阳性率为7.3%（高于上周的5.9%）。戴恩郡新冠住院病人数目由70人降至69人；重症病房新冠病人数由6人降至5人；累计死亡546例，新增2例（上周为5例）。
 
-                                    <br><br>—  截止到11月20日，戴恩郡接种至少一剂疫苗者超过47.7万人，占总人口86.5%；完成接种疫苗者超过44.3万人，占总人口的80.2%；完成接种加强针数据已暂停更新。
+                                    <br><br>—  截止到11月27日，戴恩郡接种至少一剂疫苗者超过47.8万人，占总人口86.5%；完成接种疫苗者超过44.3万人，占总人口的80.2%；完成接种加强针数据已暂停更新。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Monona湖北岸（北至E Washington Ave与Commercial Ave、东至Starkweather Creek）、Beltline高速265-266号口附近北侧（Monona市）、麦迪逊市东北部Northport Dr以北部分地区（Cherokee Marsh-South Unit以南）、戴恩郡南部的Oregon Village附近等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域如下：Monona湖北岸（北至E Washington Ave与Commercial Ave、东至Starkweather Creek）、Mondota湖东北岸（北至Northport Dr、东至Warner Park）、戴恩郡东南部的Stoughton市东北部、Monona湖东岸（Acewood Conservation Park以西）与南岸（Beltline高速与W Broadway以北）附近部分地区、威大植物园（University of Wisconsin Arboretum）周边地区等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性28例（上周为31例），包括学生15例（上周为19例，降低21%）、职工13例（上周为12例，升高8%）。一周检测阳性率为学生8.1%（上周为9.0%），职工12.0%（上周为12.6%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校中，最近一周内共新增阳性35例（上周为28例），包括学生27例（上周为15例，升高80%）、职工8例（上周为13例，降低38%）。一周检测阳性率为学生13.0%（上周为8.1%），职工7.1%（上周为12.0%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
